# GReX-T2

./: .coverage  .flake8  .gitignore  .travis.yml  README.md  cluster_heimdall.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
T2/: __init__.py  cluster_heimdall.py  names.py  plotting.py  socket.py  socket_grex.py  triggering.py
data/: catalog.txt
docs/: conf.py  index.rst
dsa110_T2.egg-info/: PKG-INFO  SOURCES.txt
grex_t2/: #cluster_heimdall.py#  cluster_heimdall.py  database.py  names.py  plotting.py  socket_grex.py  triggering.py
scripts/: cluster_cand.py  dsa_injection.py  run_T2.py  run_socket.py  run_socket_grex.py
tests/: test_cluster.py  test_run.py  test_triggering.py
tests/data/: T2_output.txt  giants.cand  giants_1.cand
