[tool.poetry]
name = "grex_t2"
version = "0.1.0"
description = "Second trigger level for GReX"
authors = ["Liam Connor <lconnor@caltech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
astropy = "^5.2.2"
hdbscan = "^0.8.29"
pandas = "^2.0.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
