[tool.poetry]
name = "grex_t2"
version = "0.1.0"
description = "Second trigger level for GReX"
authors = ["Liam Connor <lconnor@caltech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
astropy = "^5.2.2"
hdbscan = "^0.8.29"
pandas = "^2.0.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
startT2 = "scripts.run_socket_grex:main"
